Se agrego pagina de contact y usi de google analityc

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Arquitec</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/bootstrap-custom.css">
+<link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -21,7 +22,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="index.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Profolio</a>
@@ -38,7 +39,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">blog</a>
+        <a class="nav-link" href="Contact.html">Contact</a>
       </li>
 		<li class="nav-item">
         <a class="btn btn-menu" href="#">Get in touch</a>
@@ -143,24 +144,86 @@
 					</div>
 				</article>
 				<article class="col-md-3 col-sm-6 col-xs-12">
-					<div class="project">
+					<div class="project img-gris">
 						<img src="img/Oshine-Arquitect-9/carousel-2.jpg" alt="2" class="img-fluid">
-						<div class="project-info">
-							<h4>Right floating Sidebar</h4>
-							<p>Photography</p>
+						<div class="overlay"></div>
+						<div class="project-icon">
+							<h4>20</h4>
+						</div>
+						</div>
+				</article>
+				
+				<article class="col-md-3 col-sm-6 col-xs-12">
+					<div class="project">
+						<img src="img/Oshine-Arquitect-9/carousel-3.jpg" alt="carousel" class="img-fluid">
+					
+						<div class="color">
+							<h4>Texto</h4>
 						</div>
 					</div>
 				</article>
 				<article class="col-md-3 col-sm-6 col-xs-12">
-					<img src="img/Oshine-Arquitect-9/carousel-3.jpg" alt="3" class="img-fluid">
-				</article>
-				<article class="col-md-3 col-sm-6 col-xs-12">
+					<div class="project">
 					<img src="img/Oshine-Arquitect-9/carousel-4.jpg" alt="4" class="img-fluid">
+					<div class="overlay azul"></div>
+						<div class="color">
+							<h4>Texto</h4>
+						</div>
+					</div>
 				</article>
 			</div>
 		</div>
 	</section>
-	
+	<footer>
+		<section id="info-footer">
+			<div class="container">
+				<div class="row">
+					<article class="col-md-4 col-sm-12">
+						<h4>about us</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae consequuntur cumque ex facere dignissimos praesentium, laudantium explicabo excepturi voluptatum ea.</p>
+						<ul class="list-inline Redes">
+							<li class="list-inline-item"><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+							<li class="list-inline-item"><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+							<li class="list-inline-item"><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+							<li class="list-inline-item"><a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+						</ul>
+					</article>
+					<article class="col-md-4 col-sm-12">
+					</article>
+					<article class="col-md-4 col-sm-12">
+					</article>
+				</div>
+			</div>
+		</section>
+		<section id="copyright">
+			<div class="container">
+				<div class="row">
+					<article class="col-md-4 col-sm-12">
+						<p>Copyright &copy; 2020</p>
+					</article>
+					<article class="col-md-4 col-sm-12">
+						<img src="img/Oshine-Arquitect-9/oshine-small.png" class="img-fluid m-auto d-block" alt="logo footer">
+					</article>
+					<article class="col-md-4 col-sm-12 text-right">
+						<ul class="list-inline">
+							<li class="list-inline-item">
+								<a href="#">Terms & conditions</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="#">Privacy Policy</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="#">About</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="#">Contact</a>
+							</li>
+						</ul>
+					</article>
+				</div>
+			</div>
+		</section>
+	</footer>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
